# peri

./: .gitignore  CLAUDE.md  CORE_VERIFY.md  Cargo.toml  Cross.toml  FEATURES.md  ISSUES.md  README.md  TODO.md  TUI-STYLE.md  acp-improve.md  agm.json  agm.lock.json  dev-dag.sh  dev-mem.sh  progress.md
langfuse-client/: Cargo.toml
langfuse-client/src/: batcher.rs  batcher_test.rs  client.rs  client_test.rs  lib.rs
langfuse-client/src/types/: conversion.rs  mod.rs  otlp.rs
peri-acp/: Cargo.toml
peri-acp/src/agent/: builder.rs
peri-acp/src/broker/: transport_broker.rs
peri-acp/src/dispatch/: commands.rs  commands_test.rs  mod.rs  session_fork.rs  session_load.rs
peri-acp/src/event/: mapper.rs  mapper_test.rs  mod.rs
peri-acp/src/langfuse/: session.rs  tracer.rs  tracer_test.rs
peri-acp/src/prompt/: mod.rs  prompt_test.rs
peri-acp/src/provider/: config.rs  config_test.rs  mod.rs  store.rs  store_test.rs
peri-acp/src/session/: agent_pool.rs  agent_pool_test.rs  agent_runtime.rs  event_sink.rs  executor.rs  mod.rs  state_builders.rs
peri-acp/src/transport/: mpsc.rs  stdio.rs
peri-acp/tests/: concurrent_bg_agent_test.rs  integration_test.rs
peri-agent/: Cargo.toml
peri-agent/src/: error.rs  lib.rs
peri-agent/src/agent/: events.rs  events_test.rs  react.rs  state.rs  state_test.rs
peri-agent/src/goal/: mod.rs  view.rs
peri-agent/src/interaction/: channel_broker.rs  channel_broker_test.rs  channel_state.rs  mod.rs  multiplex_test.rs
peri-agent/src/llm/: adapter.rs  anthropic_test.rs  mod.rs  openai_test.rs  react_adapter.rs  retry.rs  sse.rs  sse_test.rs  types.rs  types_test.rs
peri-agent/src/messages/: content.rs
peri-agent/src/middleware/: base.rs  chain.rs  chain_test.rs  trait.rs
peri-agent/src/thread/: filesystem.rs  sqlite_store.rs  store.rs
peri-agent/tests/: agent_tests.rs
peri-dag/: Cargo.toml
peri-dag/src/: main.rs  schema.rs  watcher.rs
peri-dag/src/api/: mod.rs  workflows.rs
peri-dag/src/db/: mod.rs  models.rs
peri-dag/src/runner/: executor.rs  loader.rs  mod.rs
peri-dag/static/: index.html
peri-lsp/: Cargo.toml
peri-lsp/src/: client.rs  config.rs  diagnostics.rs  pool.rs
peri-lsp/src/jsonrpc/: transport.rs
peri-lsp/src/protocol/: notifications.rs
peri-middlewares/: CLAUDE.md  Cargo.toml
peri-middlewares/src/: compact_middleware.rs  compact_middleware_test.rs  goal_middleware.rs  goal_middleware_test.rs  lib.rs
peri-middlewares/src/agent_define/: agent_define_test.rs  mod.rs
peri-middlewares/src/agents_md/: agents_md_test.rs  mod.rs
peri-middlewares/src/ask_user/: mod.rs
peri-middlewares/src/at_mention/: file_reader.rs  mod.rs  parser.rs
peri-middlewares/src/attribution/: mod.rs
peri-middlewares/src/claude_agent_parser/: claude_agent_parser_test.rs  mod.rs
peri-middlewares/src/cron/: middleware.rs
peri-middlewares/src/hitl/: auto_classifier.rs  mod.rs  mod_test.rs  shared_mode.rs
peri-middlewares/src/hooks/: executor.rs  loader.rs  middleware.rs  mod.rs  ssrf_guard.rs  types.rs  variables.rs
peri-middlewares/src/lsp/: formatters.rs  middleware.rs
peri-middlewares/src/mcp/: auth_store.rs  callback_server.rs  channel_handler.rs  client.rs  client_oauth.rs  config.rs  config_test.rs  initialize.rs  middleware.rs  mod.rs  oauth_flow.rs  oauth_flow_test.rs  reconnect.rs  transport.rs
peri-middlewares/src/middleware/: filesystem.rs  terminal.rs  terminal_test.rs  todo.rs  web.rs  web_fetch_test.rs
peri-middlewares/src/plugin/: config.rs  config_test.rs  install_counts.rs  loader.rs  loader_test.rs  middleware.rs  types.rs  types_test.rs
peri-middlewares/src/process/: mod.rs  process_test.rs
peri-middlewares/src/skills/: loader.rs  loader_test.rs  mod.rs
peri-middlewares/src/subagent/: agent_result.rs  background_test.rs  built_in_agents.rs  built_in_agents_test.rs  fork.rs  mod.rs  mod_test.rs  skill_preload.rs
peri-middlewares/src/tool_search/: core_tools.rs  execute_tool.rs  middleware.rs  search_tool.rs  tool_index.rs  tool_index_test.rs
peri-middlewares/src/tools/: ask_user_tool.rs  mod.rs  output_persist.rs
peri-tui/: CLAUDE.md  Cargo.toml
peri-tui/locales/en/: main.ftl
peri-tui/locales/zh-CN/: main.ftl
peri-tui/prompts/sections/: 11_subagent.md
peri-tui/src/: acp_server.rs  acp_stdio.rs  alloc_config.rs  alloc_config_test.rs  cli_args.rs  cli_print.rs  jemalloc_config.rs  lib.rs  main.rs  mimalloc_config.rs  mimalloc_config_test.rs  update.rs
peri-tui/src/acp_client/: client.rs
peri-tui/src/acp_server/: compact.rs  mod.rs  notify.rs  prompt.rs  requests.rs  requests_test.rs
peri-tui/src/app/: agent.rs  agent_comm.rs  agent_compact.rs  agent_events_bg.rs  agent_events_oauth.rs  agent_events_plugin.rs  agent_ops.rs  agent_panel.rs  agent_render.rs  agent_submit.rs  agent_test.rs  ask_user_ops.rs  ask_user_prompt.rs  betas_panel.rs  chat_session.rs  command_system.rs  config_panel.rs  config_panel_test.rs  cron_state.rs  edit_utils.rs  edit_utils_test.rs  events.rs  field_textarea.rs  field_textarea_test.rs  global_ui_state.rs  hint_ops.rs  hitl_ops.rs  hooks_panel.rs  ime.rs  interaction.rs  langfuse_state.rs  memory_panel.rs  message_pipeline.rs  message_pipeline_test.rs  message_state.rs  mod.rs  model_panel.rs  model_panel_test.rs  oauth_prompt.rs  oauth_prompt_test.rs  (+11 more)
peri-tui/src/command/: mod.rs
peri-tui/src/config/: mod.rs  types.rs
peri-tui/src/event/: keyboard.rs  macros.rs  mod.rs
peri-tui/src/langfuse/: mod.rs
peri-tui/src/sync/: crypto_test.rs  packer.rs  packer_test.rs  receiver.rs  scanner.rs  scanner_test.rs  sender.rs  (+3 more)
peri-widgets/: Cargo.toml
peri-widgets/src/: bordered_panel.rs  checkbox_group.rs  file_tree.rs  file_tree_test.rs  form.rs  input_field.rs  input_field_test.rs  lib.rs  list.rs  list_overlay_test.rs  list_test.rs  radio_group.rs  scrollable.rs  tab_bar.rs
rust-agent-middlewares/: Cargo.toml
rust-agent-middlewares/src/: agent_define.rs  agent_define_test.rs  claude_agent_parser.rs  claude_agent_parser_test.rs  lib.rs
side-projects/git-graph/: CLAUDE.md  Cargo.toml  README.md  install-gig.ps1  install-gig.sh
(+826 files in other folders)
