[workspace]
members = [
    "rust-create-agent",
    "rust-agent-middlewares",
    "rust-agent-tui",
    "langfuse-client",
    "perihelion-widgets",
    "acpx-g",
]
resolver = "2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

# Patch rmcp to handle 200 OK + empty body as Accepted for Streamable HTTP.
# Upstream bug: https://github.com/anthropics/rmcp/issues/XXX
# Remove this patch once upstream releases a fix.
[patch.crates-io]
rmcp = { path = "rust-mcp-patch" }
