[package]
name = "langfuse-client"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
chrono.workspace = true
base64 = { version = "0.22", features = ["alloc"] }
tracing.workspace = true

[dev-dependencies]
temp-env = "0.3"
mockito = "1"
