[package]
name = "peri-agent"
version.workspace = true
edition.workspace = true
description = "Rust Agent framework with middleware system, aligned with @langgraph-js/standard-agent"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dirs-next.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util.workspace = true
sqlx = { workspace = true }
parking_lot.workspace = true
rand = "0.10"

[dev-dependencies]
tempfile.workspace = true
