[package]
name = "peri-lsp"
version.workspace = true
edition.workspace = true
description = "LSP client library for peri agent framework"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
lsp-types = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
