[package]
name = "peri-tui"
version.workspace = true
edition.workspace = true
description = "TUI interface for Rust Agent - interactive terminal playground"

[lib]
name = "peri_tui"
path = "src/lib.rs"

[[bin]]
name = "peri"
path = "src/main.rs"

[features]
headless = []

[dev-dependencies]
tempfile.workspace = true
[dependencies]
serde.workspace = true
peri-agent = { path = "../peri-agent" }
peri-middlewares = { path = "../peri-middlewares" }
peri-lsp = { path = "../peri-lsp" }
ratatui = { version = ">=0.30", features = ["unstable-rendered-line-info", "unstable-widget-ref"] }
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v7"] }
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
dirs-next.workspace = true
tui-textarea-2 = "0.11"
parking_lot.workspace = true
arboard = "3"
png = "0.18"
base64 = { version = "0.22", features = ["alloc"] }
peri-widgets = { path = "../peri-widgets", features = ["markdown-highlight"] }
peri-acp = { path = "../peri-acp" }
agent-client-protocol = { version = "0.11", features = ["unstable", "unstable_session_model"] }
agent-client-protocol-schema = { version = "0.12", features = ["unstable_elicitation", "unstable_session_model"] }
agent-client-protocol-tokio = "0.11"
unicode-width = "0.2"
unicode-segmentation = "1"
clap = { version = "4", features = ["derive"] }
tokio-util.workspace = true
sysinfo.workspace = true
fluent = "0.17"
fluent-bundle = "0.16"
unic-langid = { version = "0.9", features = ["macros"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
aes-gcm = "0.10"
ring = "0.17"
rmp-serde = "1.3"
thiserror.workspace = true
futures-util = "0.3"
glob = "0.3"
fuzzy-matcher = "0.3"

[target.'cfg(not(target_os = "windows"))'.dependencies]
mimalloc.workspace = true
libmimalloc-sys.workspace = true
