[package]
name = "gig"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
ratatui = ">=0.30"
crossterm = "0.28"
git2 = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-width = "0.2"
peri-widgets = { path = "../../peri-widgets" }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
