[package]
name = "gig"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
ratatui = ">=0.30"
crossterm = "0.28"
git2 = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-width = "0.2"
peri-widgets = { path = "../../peri-widgets" }

# update 命令依赖
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
flate2 = "1"
tar = "0.4"
zip = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
